# publicdotcom-py

./: pyproject.toml
examples/: example_async.py
src/public_api_sdk/: __init__.py  async_api_client.py  async_auth_manager.py  async_price_stream.py  async_public_api_client.py  auth_config.py  auth_manager.py  auth_provider.py  public_api_client.py  subscription_manager.py
src/public_api_sdk/models/: __init__.py  async_new_order.py  history.py  instrument.py  option.py  order.py  quote.py
tests/: test_async_new_order.py  test_async_price_stream.py  test_async_public_api_client.py
tests/unit/: test_api_client_errors.py  test_auth_providers_extended.py  test_new_order_lifecycle.py  test_order_validation.py  test_public_api_client_integration.py  test_subscription_stress.py
